Added light markup (instructions & score)

--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Simple JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1 class="title">Object-Oriented JS: Frogger!</h1>
+	<div class="instructions">
+		Instructions: Use the arrow keys to navigate the player character to the river. Watch out for the bugs! Keep reaching the river to increase your score, and see how high you can get!
+	</div>
+	<div class="scoreboard">
+		Score: <span class="score"></span>
+	</div> 
+	<!-- Used as a placeholder div for game canvas -->
+	<div class="gameCanvas">
+	</div>
+	<footer>
+		Developed by Steve Prager as part of the Udacity FEND program.
+	</footer>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
