Rescale page and clean up UI

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 	<h1 class="title">Object-Oriented JS: Frogger!</h1>
 	<div class="instructions">
 		Instructions: Use the arrow keys to navigate the player character to the river. Watch out for the bugs! Keep reaching the river to increase your score, and see how high you can get!
+		<ul>
+			<li>Reach the River: +500 points</li>
+			<li>Step on a Bug: -100 points</li>
+		</ul>
 	</div>
 	<div class="scoreboard">
-		Score: <span class="score"></span>
+		Score: <span class="score">0</span>
 	</div> 
 	<!-- Used as a placeholder div for game canvas -->
 	<div class="gameCanvas">
