Refine margin for player error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="instructions">
 		Instructions: Use the arrow keys to navigate the player character to the river. Watch out for the bugs! Keep reaching the river to increase your score, and see how high you can get!
 		<ul>
-			<li>Reach the River: +500 points</li>
+			<li>Reach the River: +500 points, +1 bug</li>
 			<li>Step on a Bug: -100 points</li>
 		</ul>
 	</div>
